--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
     "@thirdweb-dev/react": "~3.10",
     "@thirdweb-dev/sdk": "~3.10",
     "ethers": "~5.7.2",
+    "framer-motion": "^10.12.7",
     "next": "^13",
+    "next-pwa": "^5.6.0",
     "react": "^18.2",
     "react-dom": "^18.2"
   },
