--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
+    "@fontsource/montserrat": "^4.5.14",
     "@thirdweb-dev/react": "~3.10",
     "@thirdweb-dev/sdk": "~3.10",
     "ethers": "~5.7.2",
