--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.6.1",
-    "@emotion/react": "^11.10.8",
-    "@emotion/styled": "^11.10.8",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@fontsource/montserrat": "^4.5.14",
-    "@thirdweb-dev/react": "~3.10",
-    "@thirdweb-dev/sdk": "~3.10",
-    "ethers": "~5.7.2",
-    "framer-motion": "^10.12.7",
+    "@thirdweb-dev/react": "^3.11.11",
+    "@thirdweb-dev/sdk": "^3.10.14",
+    "ethers": "^5",
+    "framer-motion": "^10.12.10",
     "next": "^13",
     "next-pwa": "^5.6.0",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
     "@types/react": "^18",
     "eslint": "^8.29.0",
-    "eslint-config-next": "^13",
-    "typescript": "^4.9.4"
+    "eslint-config-next": "^13"
   }
 }
