--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2",
     "react-dom": "^18.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
